﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:
		TODO
		
	Code changes:
		-[BREAKING CHANGE] One overload of entry point method 'Ensures' has been removed.
		 The overload Condition.Ensures<T>(T value, string argumentName, string additionalMessage) has been
		 removed. Because of this change, the EnsuresValidator has been adjusted and some unit tests have
		 been removed. The overload has become redundant in version 1.0.2.0, after overload methods where
		 added with a 'conditionDescription' parameter of type string for all extension methods.
	

Version 1.0.3.0 (v1.0 beta 3) 2009-03-15
	General description:
		This released has some breaking changes to allow better support for languages other than C# (VB.NET
		for instance, wasn't supported well). Therefore, the old release is both binary and code incompatible.
		Still, C# users shouldn't expect to make any changes to their code.
	
	Bug Fixes:
		-Added an [Obsolete] attribute to the Equals(object) method of the Validator<T> class. The Equals 
		 method is not meant to be used by framework users and the compiler will now show a warning with the
		 message ''This method is not part of the validation framework. Please use the IsEqualTo method.' which
		 indicates clearly that the user should use the IsEqualTo method.	

	Code changes:
		-[BREAKING CHANGE] Entry point methods 'Requires' and 'Ensures' moved to a more meaningful class,
		 named 'Condition'. This leads to a more intuitive API for languages that do not support extension
		 methods on all type of objects such as VB.NET, which does not support extension methods on arguments
		 of the System.Object.


Version 1.0.2.0 (v1.0 beta 2) 2008-12-20
	General description:
		This release has several breaking changes. Therefore, the old release can not be swapped with this 
		release, without a recompilation. However, there is just one change in behavior users should pay